wondering about mobile

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -122,7 +122,7 @@ body {
   line-height: 1.5; }
 
 a {
-  color: #00d1b2;
+  color: #9f38ff;
   cursor: pointer;
   text-decoration: none;
   transition: none 86ms ease-out; }
@@ -426,9 +426,9 @@ table {
     margin-bottom: 1.5rem; }
 
 a.box:hover, a.box:focus {
-  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px #00d1b2; }
+  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px #9f38ff; }
 a.box:active {
-  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2), 0 0 0 1px #00d1b2; }
+  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2), 0 0 0 1px #9f38ff; }
 
 .button {
   -moz-appearance: none;
@@ -500,8 +500,8 @@ a.box:active {
     border-color: #b5b5b5;
     color: #363636; }
   .button:focus, .button.is-focused {
-    border-color: #00d1b2;
-    box-shadow: 0 0 0.5em rgba(0, 209, 178, 0.25);
+    border-color: #9f38ff;
+    box-shadow: 0 0 0.5em rgba(159, 56, 255, 0.25);
     color: #363636; }
   .button:active, .button.is-active {
     border-color: #4a4a4a;
@@ -680,46 +680,46 @@ a.box:active {
         background-color: whitesmoke;
         color: #363636; }
   .button.is-primary {
-    background-color: #00d1b2;
+    background-color: #9f38ff;
     border-color: transparent;
     color: #fff; }
     .button.is-primary:hover, .button.is-primary.is-hovered {
-      background-color: #00c4a7;
+      background-color: #992bff;
       border-color: transparent;
       color: #fff; }
     .button.is-primary:focus, .button.is-primary.is-focused {
       border-color: transparent;
-      box-shadow: 0 0 0.5em rgba(0, 209, 178, 0.25);
+      box-shadow: 0 0 0.5em rgba(159, 56, 255, 0.25);
       color: #fff; }
     .button.is-primary:active, .button.is-primary.is-active {
-      background-color: #00b89c;
+      background-color: #931fff;
       border-color: transparent;
       box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2);
       color: #fff; }
     .button.is-primary.is-inverted {
       background-color: #fff;
-      color: #00d1b2; }
+      color: #9f38ff; }
       .button.is-primary.is-inverted:hover {
         background-color: #f2f2f2; }
     .button.is-primary.is-loading:after {
       border-color: transparent transparent #fff #fff !important; }
     .button.is-primary.is-outlined {
       background-color: transparent;
-      border-color: #00d1b2;
-      color: #00d1b2; }
+      border-color: #9f38ff;
+      color: #9f38ff; }
       .button.is-primary.is-outlined:hover, .button.is-primary.is-outlined:focus {
-        background-color: #00d1b2;
-        border-color: #00d1b2;
+        background-color: #9f38ff;
+        border-color: #9f38ff;
         color: #fff; }
       .button.is-primary.is-outlined.is-loading:after {
-        border-color: transparent transparent #00d1b2 #00d1b2 !important; }
+        border-color: transparent transparent #9f38ff #9f38ff !important; }
     .button.is-primary.is-inverted.is-outlined {
       background-color: transparent;
       border-color: #fff;
       color: #fff; }
       .button.is-primary.is-inverted.is-outlined:hover, .button.is-primary.is-inverted.is-outlined:focus {
         background-color: #fff;
-        color: #00d1b2; }
+        color: #9f38ff; }
   .button.is-info {
     background-color: #3273dc;
     border-color: transparent;
@@ -1144,7 +1144,7 @@ a.box:active {
   .textarea.is-focused,
   .textarea:active,
   .textarea.is-active {
-    border-color: #00d1b2; }
+    border-color: #9f38ff; }
   .input[disabled], .input.is-disabled,
   .textarea[disabled],
   .textarea.is-disabled {
@@ -1185,7 +1185,7 @@ a.box:active {
     border-color: #363636; }
   .input.is-primary,
   .textarea.is-primary {
-    border-color: #00d1b2; }
+    border-color: #9f38ff; }
   .input.is-info,
   .textarea.is-info {
     border-color: #3273dc; }
@@ -1260,7 +1260,7 @@ a.box:active {
   position: relative;
   vertical-align: top; }
   .select:after {
-    border: 1px solid #00d1b2;
+    border: 1px solid #9f38ff;
     border-right: 0;
     border-top: 0;
     content: " ";
@@ -1305,7 +1305,7 @@ a.box:active {
     .select select:hover, .select select.is-hovered {
       border-color: #b5b5b5; }
     .select select:focus, .select select.is-focused, .select select:active, .select select.is-active {
-      border-color: #00d1b2; }
+      border-color: #9f38ff; }
     .select select[disabled], .select select.is-disabled {
       background-color: whitesmoke;
       border-color: whitesmoke;
@@ -1357,7 +1357,7 @@ a.box:active {
   .help.is-dark {
     color: #363636; }
   .help.is-primary {
-    color: #00d1b2; }
+    color: #9f38ff; }
   .help.is-info {
     color: #3273dc; }
   .help.is-success {
@@ -1629,7 +1629,7 @@ a.box:active {
     background-color: #363636;
     color: whitesmoke; }
   .notification.is-primary {
-    background-color: #00d1b2;
+    background-color: #9f38ff;
     color: #fff; }
   .notification.is-info {
     background-color: #3273dc;
@@ -1679,9 +1679,9 @@ a.box:active {
   .progress.is-dark::-moz-progress-bar {
     background-color: #363636; }
   .progress.is-primary::-webkit-progress-value {
-    background-color: #00d1b2; }
+    background-color: #9f38ff; }
   .progress.is-primary::-moz-progress-bar {
-    background-color: #00d1b2; }
+    background-color: #9f38ff; }
   .progress.is-info::-webkit-progress-value {
     background-color: #3273dc; }
   .progress.is-info::-moz-progress-bar {
@@ -1780,7 +1780,7 @@ a.box:active {
     background-color: #363636;
     color: whitesmoke; }
   .tag.is-primary {
-    background-color: #00d1b2;
+    background-color: #9f38ff;
     color: #fff; }
   .tag.is-info {
     background-color: #3273dc;
@@ -2151,9 +2151,9 @@ a.box:active {
     padding: 0.5em 0.75em; }
     .menu-list a:hover {
       background-color: whitesmoke;
-      color: #00d1b2; }
+      color: #9f38ff; }
     .menu-list a.is-active {
-      background-color: #00d1b2;
+      background-color: #9f38ff;
       color: #fff; }
   .menu-list li ul {
     border-left: 1px solid #dbdbdb;
@@ -2209,13 +2209,13 @@ a.box:active {
       border-color: #363636;
       color: #2a2a2a; }
   .message.is-primary {
-    background-color: #f5fffd; }
+    background-color: #faf5ff; }
     .message.is-primary .message-header {
-      background-color: #00d1b2;
+      background-color: #9f38ff;
       color: #fff; }
     .message.is-primary .message-body {
-      border-color: #00d1b2;
-      color: #021310; }
+      border-color: #9f38ff;
+      color: #7a07e5; }
   .message.is-info {
     background-color: #f6f9fe; }
     .message.is-info .message-header {
@@ -2450,7 +2450,7 @@ a.box:active {
   .nav-toggle:hover {
     background-color: whitesmoke; }
   .nav-toggle.is-active span {
-    background-color: #00d1b2; }
+    background-color: #9f38ff; }
     .nav-toggle.is-active span:nth-child(1) {
       margin-left: -5px;
       transform: rotate(45deg);
@@ -2514,12 +2514,12 @@ a.nav-item {
     padding-top: calc(0.5rem - 1px); }
     .nav-item a.is-tab:hover,
     a.nav-item.is-tab:hover {
-      border-bottom-color: #00d1b2;
+      border-bottom-color: #9f38ff;
       border-top-color: transparent; }
     .nav-item a.is-tab.is-active,
     a.nav-item.is-tab.is-active {
-      border-bottom: 3px solid #00d1b2;
-      color: #00d1b2;
+      border-bottom: 3px solid #9f38ff;
+      color: #9f38ff;
       padding-bottom: calc(0.5rem - 3px); }
   @media screen and (min-width: 1000px) {
     .nav-item a.is-brand,
@@ -2661,7 +2661,7 @@ a.nav-item {
   .pagination-previous:focus,
   .pagination-next:focus,
   .pagination-link:focus {
-    border-color: #00d1b2; }
+    border-color: #9f38ff; }
   .pagination-previous:active,
   .pagination-next:active,
   .pagination-link:active {
@@ -2682,8 +2682,8 @@ a.nav-item {
   padding-right: 0.75em; }
 
 .pagination-link.is-current {
-  background-color: #00d1b2;
-  border-color: #00d1b2;
+  background-color: #9f38ff;
+  border-color: #9f38ff;
   color: #fff; }
 
 .pagination-ellipsis {
@@ -2788,7 +2788,7 @@ a.nav-item {
 .panel-list a {
   color: #0a0a0a; }
   .panel-list a:hover {
-    color: #00d1b2; }
+    color: #9f38ff; }
 
 .panel-block {
   align-items: center;
@@ -2803,10 +2803,10 @@ a.nav-item {
     flex-shrink: 1;
     width: 100%; }
   .panel-block.is-active {
-    border-left-color: #00d1b2;
+    border-left-color: #9f38ff;
     color: #363636; }
     .panel-block.is-active .panel-icon {
-      color: #00d1b2; }
+      color: #9f38ff; }
 
 a.panel-block,
 label.panel-block {
@@ -2859,8 +2859,8 @@ label.panel-block {
   .tabs li {
     display: block; }
     .tabs li.is-active a {
-      border-bottom-color: #00d1b2;
-      color: #00d1b2; }
+      border-bottom-color: #9f38ff;
+      color: #9f38ff; }
   .tabs ul {
     align-items: center;
     border-bottom: 1px solid #dbdbdb;
@@ -2914,8 +2914,8 @@ label.panel-block {
   .tabs.is-toggle li:last-child a {
     border-radius: 0 3px 3px 0; }
   .tabs.is-toggle li.is-active a {
-    background-color: #00d1b2;
-    border-color: #00d1b2;
+    background-color: #9f38ff;
+    border-color: #9f38ff;
     color: #fff;
     z-index: 1; }
   .tabs.is-toggle ul {
@@ -3758,7 +3758,7 @@ label.panel-block {
       .hero.is-dark .nav-menu .nav-item {
         border-top-color: rgba(245, 245, 245, 0.2); } }
   .hero.is-primary {
-    background-color: #00d1b2;
+    background-color: #9f38ff;
     color: #fff; }
     .hero.is-primary a,
     .hero.is-primary strong {
@@ -3774,7 +3774,7 @@ label.panel-block {
       box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2); }
     @media screen and (max-width: 768px) {
       .hero.is-primary .nav-menu {
-        background-color: #00d1b2; } }
+        background-color: #9f38ff; } }
     .hero.is-primary a.nav-item,
     .hero.is-primary .nav-item a:not(.button) {
       color: rgba(255, 255, 255, 0.7); }
@@ -3796,9 +3796,9 @@ label.panel-block {
     .hero.is-primary .tabs.is-boxed li.is-active a, .hero.is-primary .tabs.is-boxed li.is-active a:hover, .hero.is-primary .tabs.is-toggle li.is-active a, .hero.is-primary .tabs.is-toggle li.is-active a:hover {
       background-color: #fff;
       border-color: #fff;
-      color: #00d1b2; }
+      color: #9f38ff; }
     .hero.is-primary.is-bold {
-      background-image: linear-gradient(141deg, #009e6c 0%, #00d1b2 71%, #00e7eb 100%); }
+      background-image: linear-gradient(141deg, #5d05ff 0%, #9f38ff 71%, #c852ff 100%); }
     @media screen and (max-width: 768px) {
       .hero.is-primary .nav-toggle span {
         background-color: #fff; }
