--- a/app/templates/articles.ejs
+++ b/app/templates/articles.ejs
@@ -6,6 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name='description' content='Articles written by Harshith Goka'>
 
   <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
   <link rel="preload" href="./styles/articles.css" as="style">
